# mcp-security-gateway

./: .gitignore  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.distroless  README.md  docker-compose.distroless.yml  docker-compose.yml  mkdocs.yml  rustfmt.toml
.github/: release-drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  docs.yml  e2e-test.yml  release-drafter.yml  renovate.yml  security-scan.yml
charts/mcp-gateway/: Chart.yaml  values.yaml
charts/mcp-gateway/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
config/: prometheus.yml
config/prometheus/: alert_rules.yml  prometheus.yml
crates/mcp-common/: Cargo.toml
crates/mcp-common/src/: error.rs  grpc.rs  grpc_mapping_tests.rs  lib.rs  models.rs  utils.rs
crates/mcp-gateway/: Cargo.toml  build.rs
crates/mcp-gateway/src/: error.rs  lib.rs  main.rs  metrics.rs  proto.rs  server.rs  service.rs  service_tests.rs  tracing.rs
crates/mcp-gateway/src/proto/: mcp.rs
crates/mcp-policy/: Cargo.toml
crates/mcp-policy/src/: engine.rs  lib.rs  models.rs
crates/mcp-sandbox/: Cargo.toml
crates/mcp-sandbox/profiles/: basic.json  network.json
crates/mcp-sandbox/src/: bubblewrap.rs  executor.rs  executor_tests.rs  lib.rs  models.rs  runner.rs  runner_tests.rs  seccomp.rs
docs/troubleshooting/: opentelemetry_tracing.md
grafana/dashboards/: overview-dashboard.json  performance-dashboard.json
policies/rego/: command.rego  file.rego  main.rego  network.rego
proto/: mcp.proto
scripts/: build-distroless.sh  build-packages.sh  postinst.sh  prerm.sh
tests/e2e/: ls_flow_test.py
tests/performance/: locustfile.py  run_performance_test.sh
