[workspace]
members = [
    "crates/mcp-gateway",
    "crates/mcp-policy",
    "crates/mcp-sandbox",
    "crates/mcp-common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["MCP Team"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/username/mcp-security-gateway"

[workspace.dependencies]
# 基本的な依存関係
tokio = { version = "1.34.0", features = ["full"] }
tonic = "0.10.2"
prost = "0.12.3"
axum = { version = "0.7.2", features = ["http1", "http2"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter", "time"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
opa-wasm = "0.1"

# OpenTelemetry関連
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = "0.20.0"

# メトリクス関連
prometheus = { version = "0.14.0", features = ["process"] }
prometheus-client = "0.21.2"

# ユーティリティ
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
chrono = { version = "0.4.31", features = ["serde"] }
dashmap = "5.5.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true 